# cs184_sp25_final_project

./: CMakeLists.txt  CMakeSettings.json  main.cpp  main_1_light.txt  main_chroma.txt  main_chroma_polka.txt  main_texture.cpp  shader.cpp  shader.h
hw4_helpers/: shaderUtils.h
shaders/: chroma.frag  crosshatch.frag  crosshatch.vert  guap.frag  notebook.frag  polka_dot.frag  sine_waves.frag  stipple.frag  toon.frag  toon.vert  toon_5_tones.frag  toon_best.frag  toon_blue_yellow.frag  toon_thermal.frag
src/pathtracer/: bsdf.cpp  camera.cpp  pathtracer.cpp
src/scene/: bbox.cpp  bvh.cpp  sphere.cpp  triangle.cpp
